####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libtransformation.la

libtransformation_la_SOURCES = WalshTransformation.cpp IntensityMapper.cpp Mirror.cpp Flip.cpp MinMax.cpp Convert.cpp Gradient.cpp FourierTransformation.cpp Test.cpp TSRTransformation.cpp LinearScale.cpp DrawRectangle.cpp UnaryTransformation.cpp Noise.cpp Transformation.cpp Duplicate.cpp Scale.cpp 

sectiondir = $(includedir)/gip
section_HEADERS = Scale.h Duplicate.h Transformation.h Noise.h UnaryTransformation.h DrawRectangle.h LinearScale.h TSRTransformation.h Test.h FourierTransformation.h Gradient.h Convert.h MinMax.h Flip.h Mirror.h IntensityMapper.h WalshTransformation.h

EXTRA_DIST =
