# ***************************************************************************
#    Generic Image Processing (GIP) Framework (Test Suite)
#    A framework for developing image processing applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

bin_PROGRAMS = gip types bmpio gifio FourierTransformation WalshTransformation MedianFilter3x3 LPF ContrastStretch EqualizeHistogram

gip_SOURCES = gip.cpp
types_SOURCES = types.cpp
bmpio_SOURCES = bmpio.cpp
gifio_SOURCES = gifio.cpp
FourierTransformation_SOURCES = FourierTransformation.cpp
WalshTransformation_SOURCES = WalshTransformation.cpp
MedianFilter3x3_SOURCES = MedianFilter3x3.cpp
LPF_SOURCES = LPF.cpp
ContrastStretch_SOURCES = ContrastStretch.cpp
EqualizeHistogram_SOURCES = EqualizeHistogram.cpp

EXTRA_DIST =
