# ***************************************************************************
#    Generic Image Processing (GIP) Framework (Test Suite)
#    A framework for developing image processing applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

bin_PROGRAMS = gip
bin_PROGRAMS += types
bin_PROGRAMS += bmpio
bin_PROGRAMS += gifio
bin_PROGRAMS += RASEncoder
bin_PROGRAMS += FourierTransformation
bin_PROGRAMS += WalshTransformation
bin_PROGRAMS += MedianFilter3x3
bin_PROGRAMS += ContrastStretch
bin_PROGRAMS += EqualizeHistogram
bin_PROGRAMS += Convolution
bin_PROGRAMS += Canvas
bin_PROGRAMS += Erode
bin_PROGRAMS += Dilate
bin_PROGRAMS += Flip
bin_PROGRAMS += Mirror
bin_PROGRAMS += Rotate
bin_PROGRAMS += Scale
bin_PROGRAMS += Stat
bin_PROGRAMS += Transpose

gip_SOURCES = gip.cpp
types_SOURCES = types.cpp
bmpio_SOURCES = bmpio.cpp
gifio_SOURCES = gifio.cpp
RASEncoder_SOURCES = RASEncoder.cpp
FourierTransformation_SOURCES = FourierTransformation.cpp
WalshTransformation_SOURCES = WalshTransformation.cpp
MedianFilter3x3_SOURCES = MedianFilter3x3.cpp
ContrastStretch_SOURCES = ContrastStretch.cpp
EqualizeHistogram_SOURCES = EqualizeHistogram.cpp
Convolution_SOURCES = Convolution.cpp
Erode_SOURCES = Erode.cpp
Dilate_SOURCES = Dilate.cpp
Canvas_SOURCES = Canvas.cpp
Flip_SOURCES = Flip.cpp
Mirror_SOURCES = Mirror.cpp
Rotate_SOURCES = Rotate.cpp
Scale_SOURCES = Scale.cpp
Stat_SOURCES = Stat.cpp
Transpose_SOURCES = Transpose.cpp

EXTRA_DIST =
