# ***************************************************************************
#    Generic Image Processing (GIP) Framework (Test Suite)
#    A framework for developing image processing applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

bin_PROGRAMS = gip
bin_PROGRAMS += types
bin_PROGRAMS += bmpio
bin_PROGRAMS += gifio
bin_PROGRAMS += jpeg2bmp
bin_PROGRAMS += BresenhamScale
bin_PROGRAMS += Camera1394
bin_PROGRAMS += Canvas
bin_PROGRAMS += ContrastStretch
bin_PROGRAMS += Convolution
bin_PROGRAMS += Dilate
bin_PROGRAMS += DiscreteCosineTransformation
bin_PROGRAMS += EqualizeHistogram
bin_PROGRAMS += Erode
bin_PROGRAMS += FourierTransformation
bin_PROGRAMS += Flip
bin_PROGRAMS += GaussianBlur
bin_PROGRAMS += HaarTransformation
bin_PROGRAMS += Hough
bin_PROGRAMS += MedianFilter3x3
bin_PROGRAMS += Mirror
bin_PROGRAMS += RASEncoder
bin_PROGRAMS += Rotate
bin_PROGRAMS += Scale
bin_PROGRAMS += Stat
bin_PROGRAMS += StraightLineHoughTransformation
bin_PROGRAMS += Tile
bin_PROGRAMS += Transpose
bin_PROGRAMS += videophone
bin_PROGRAMS += viewer
bin_PROGRAMS += WalshTransformation

gip_SOURCES = gip.cpp
types_SOURCES = types.cpp
bmpio_SOURCES = bmpio.cpp
gifio_SOURCES = gifio.cpp
jpeg2bmp_SOURCES = jpeg2bmp.cpp
BresenhamScale_SOURCES = BresenhamScale.cpp
Camera1394_SOURCES = Camera1394.cpp
Canvas_SOURCES = Canvas.cpp
ContrastStretch_SOURCES = ContrastStretch.cpp
Convolution_SOURCES = Convolution.cpp
Dilate_SOURCES = Dilate.cpp
DiscreteCosineTransformation_SOURCES = DiscreteCosineTransformation.cpp
EqualizeHistogram_SOURCES = EqualizeHistogram.cpp
Erode_SOURCES = Erode.cpp
Flip_SOURCES = Flip.cpp
FourierTransformation_SOURCES = FourierTransformation.cpp
GaussianBlur_SOURCES = GaussianBlur.cpp
HaarTransformation_SOURCES = HaarTransformation.cpp
Hough_SOURCES = StraightLineHoughTransformation.cpp
MedianFilter3x3_SOURCES = MedianFilter3x3.cpp
Mirror_SOURCES = Mirror.cpp
RASEncoder_SOURCES = RASEncoder.cpp
Rotate_SOURCES = Rotate.cpp
Scale_SOURCES = Scale.cpp
Stat_SOURCES = Stat.cpp
StraightLineHoughTransformation_SOURCES = StraightLineHoughTransformation.cpp
Tile_SOURCES = Tile.cpp
Transpose_SOURCES = Transpose.cpp
videophone_SOURCES = videophone.cpp
viewer_SOURCES = viewer.cpp
WalshTransformation_SOURCES = WalshTransformation.cpp

EXTRA_DIST =
